@@ -181,8 +181,10 @@ int SettingGetName(int index,SettingName name);
 #define cSetting_static_singletons    82
 #define cSetting_max_triangles        83
 #define cSetting_depth_cue            84
+#define cSetting_specular             85
+#define cSetting_shininess            86
 
-#define cSetting_INIT                 85
+#define cSetting_INIT                 90
 
 #endif
 
